--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -19,8 +19,7 @@
           <div class="markdown-html markdown-body"></div>
           <script type="text/markdown">
             ### Avatar
-            - Add custom gravatar component
-            - Listen events from the details element to update email, name and gravatar
+            - Add dropdown menu
 
             ### Add Cloud
             - Place the real Object
