--- a/app/elements/plan-item-element.html
+++ b/app/elements/plan-item-element.html
@@ -8,10 +8,6 @@
         display: block;
       }
 
-      iron-form paper-button {
-        margin: 20px 0 0;
-      }
-
       paper-card {
         display: block;
         width: 25%;
@@ -19,7 +15,11 @@
         text-align: center;
       }
 
-      iron-form paper-dropdown-menu {
+      #form paper-button {
+        margin: 20px 0 0;
+      }
+
+      #form paper-dropdown-menu {
         display: block;
       }
 
