--- a/app/elements/feedback-page-element.html
+++ b/app/elements/feedback-page-element.html
@@ -47,7 +47,7 @@
     <template is="dom-if" if="[[!pageSecond]]">
       <paper-card heading="Feedback (Page 1 of 2)">
         <div class="card-content">
-          <paper-input label="What's your first name?" required error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
+          <paper-input label="What's your first name?" required auto-validate error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
 
           <paper-input label="What's your last name?" required error-message="Please enter your last name" value="{{user.lastName}}"></paper-input>
 
