--- a/app/elements/password-element.html
+++ b/app/elements/password-element.html
@@ -12,11 +12,11 @@
         display: block;
       }
 
-      iron-form paper-button {
+      #form paper-button {
         margin: 20px 0 0;
       }
 
-      iron-form paper-dropdown-menu {
+      #form paper-dropdown-menu {
         display: block;
       }
     </style>
@@ -24,7 +24,7 @@
     <paper-card heading="Password Reset">
       <div class="card-content">
         <template is="dom-if" if="[[user.hasPass]]">
-          <iron-form id="form" method="post" action="/password">
+          <form is="iron-form" id="form" method="post" action="/password">
             <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}"></paper-input>
 
             <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}"></paper-input>
@@ -32,7 +32,7 @@
             <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}"></paper-input>
 
             <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
-          </iron-form>
+          </form>
         </template>
 
         <template is="dom-if" if="[[!user.hasPass]]">
