--- a/app/elements/user-menu-element.html
+++ b/app/elements/user-menu-element.html
@@ -17,12 +17,12 @@
         margin-right: 10px;
       }
 
-      gravatar-component ::content img {
+      gravatar-component > ::content img {
         border-radius: 50%;
         border: 2px solid #3f51b5;
       }
 
-      gravatar-component ::content img:hover {
+      gravatar-component > ::content img:hover {
           border: 2px solid #fff;
       }
     </style>
