--- a/app/elements/password-element.html
+++ b/app/elements/password-element.html
@@ -12,27 +12,33 @@
         display: block;
       }
 
-      #form paper-button {
+      paper-button {
         margin: 20px 0 0;
       }
 
-      #form paper-dropdown-menu {
-        display: block;
+      paper-button {
+        margin: 20px 0 0;
+        background-color: #3f51b5;
+        color: #fff;
+      }
+
+      paper-button[disabled] {
+        background-color: #ccc;
+        color: #fff;
+        cursor: not-allowed;
       }
     </style>
 
     <paper-card heading="Password Reset">
       <div class="card-content">
         <template is="dom-if" if="[[user.hasPass]]">
-          <form is="iron-form" id="form" method="post" action="/password">
-            <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}"></paper-input>
+          <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}"></paper-input>
 
-            <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}"></paper-input>
+          <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}"></paper-input>
 
-            <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}"></paper-input>
+          <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}"></paper-input>
 
-            <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
-          </form>
+          <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
         </template>
 
         <template is="dom-if" if="[[!user.hasPass]]">
@@ -93,8 +99,6 @@
           return formReady;
         },
         _submitForm: function(e) {
-          var form = document.getElementById('form');
-
           var payload = {
             action: 'update_password',
             current_password: this.user.currentPassword,
