--- a/app/elements/details-element.html
+++ b/app/elements/details-element.html
@@ -12,11 +12,11 @@
         display: block;
       }
 
-      #form paper-button {
+      paper-card paper-button {
         margin: 20px 0 0;
       }
 
-      #form paper-dropdown-menu {
+      paper-card paper-dropdown-menu {
         display: block;
       }
 
@@ -35,39 +35,37 @@
 
     <paper-card heading="Account Details">
       <div class="card-content">
-        <form is="iron-form" id="form" method="post" action="/account">
-          <paper-input label="What's your first name?" required auto-validate error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
+        <paper-input label="What's your first name?" required error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
 
-          <paper-input label="What's your last name?" required auto-validate error-message="Please enter your last name" value="{{user.lastName}}"></paper-input>
+        <paper-input label="What's your last name?" required error-message="Please enter your last name" value="{{user.lastName}}"></paper-input>
 
-          <paper-input label="What's your company's name?" required auto-validate error-message="Please enter your company's name" value="{{user.companyName}}"></paper-input>
+        <paper-input label="What's your company's name?" required error-message="Please enter your company's name" value="{{user.companyName}}"></paper-input>
 
-          <paper-dropdown-menu label="Where is your business located?" error-message="Please select your business location" horizontal-align="left">
-            <paper-menu attr-for-selected="value" selected="{{user.country}}" class="dropdown-content">
-              <template is="dom-repeat" items="[[countriesOptions]]" as="country">
-                <paper-item value="[[country]]">[[country]]</paper-item>
-              </template>
-            </paper-menu>
-          </paper-dropdown-menu>
+        <paper-dropdown-menu label="Where is your business located?" horizontal-align="left">
+          <paper-menu attr-for-selected="value" selected="{{user.country}}" class="dropdown-content">
+            <template is="dom-repeat" items="[[countriesOptions]]" as="country">
+              <paper-item value="[[country]]">[[country]]</paper-item>
+            </template>
+          </paper-menu>
+        </paper-dropdown-menu>
 
-          <paper-dropdown-menu label="How many people work there?" horizontal-align="left">
-            <paper-menu attr-for-selected="value" selected="{{user.numberOfPeople}}" class="dropdown-content">
-              <template is="dom-repeat" items="[[numberOfPeopleOptions]]" as="people">
-                <paper-item value="[[people]]">[[people]]</paper-item>
-              </template>
-            </paper-menu>
-          </paper-dropdown-menu>
+        <paper-dropdown-menu label="How many people work there?" horizontal-align="left">
+          <paper-menu attr-for-selected="value" selected="{{user.numberOfPeople}}" class="dropdown-content">
+            <template is="dom-repeat" items="[[numberOfPeopleOptions]]" as="people">
+              <paper-item value="[[people]]">[[people]]</paper-item>
+            </template>
+          </paper-menu>
+        </paper-dropdown-menu>
 
-          <paper-dropdown-menu label="How many servers do you have?" horizontal-align="left">
-            <paper-menu attr-for-selected="value" selected="{{user.numberOfServers}}" class="dropdown-content">
-              <template is="dom-repeat" items="[[numberOfServersOptions]]" as="servers">
-                <paper-item value="[[servers]]">[[servers]]</paper-item>
-              </template>
-            </paper-menu>
-          </paper-dropdown-menu>
+        <paper-dropdown-menu label="How many servers do you have?" horizontal-align="left">
+          <paper-menu attr-for-selected="value" selected="{{user.numberOfServers}}" class="dropdown-content">
+            <template is="dom-repeat" items="[[numberOfServersOptions]]" as="servers">
+              <paper-item value="[[servers]]">[[servers]]</paper-item>
+            </template>
+          </paper-menu>
+        </paper-dropdown-menu>
 
-          <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
-        </form>
+        <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
       </div>
     </paper-card>
 
@@ -126,34 +124,18 @@
           return firstName && lastName && country && companyName && numberOfPeople && numberOfServers;
         },
         _submitForm: function(e) {
-          var form = this.$.form,
-            payload = {
-              action: 'update_details',
-              first_name: this.user.firstName,
-              last_name: this.user.lastName,
-              last_name: this.user.lastName,
-              company_name: this.user.companyName,
-              country: this.user.country,
-              number_of_servers: this.user.numberOfServers,
-              number_of_people: this.user.numberOfPeople
-            };
+          var payload = {
+            action: 'update_details',
+            first_name: this.user.firstName,
+            last_name: this.user.lastName,
+            last_name: this.user.lastName,
+            company_name: this.user.companyName,
+            country: this.user.country,
+            number_of_servers: this.user.numberOfServers,
+            number_of_people: this.user.numberOfPeople
+          };
 
-          if (form.validate()) {
-            this.fire('iron-signal', {
-              name: 'user-menu',
-              data: {
-                firstName: this.user.firstName,
-                lastName: this.user.lastName
-              }
-            });
-
-            this.fire('iron-signal', {
-              name: 'notification',
-              data: {
-                title: this.user.firstName + ' your details were updated!'
-              }
-            });
-          }
+          this._fireEvents();
 
           //   this.$.ajax.body = payload;
           //   this.$.ajax.generateRequest();
@@ -163,6 +145,25 @@
         },
         _ajaxResponse: function() {
           this.set('sendingData', false);
+          this._fireEvents();
+        },
+        _fireEvents: function() {
+          // Update user's info where needed
+          this.fire('iron-signal', {
+            name: 'user-menu',
+            data: {
+              firstName: this.user.firstName,
+              lastName: this.user.lastName
+            }
+          });
+
+          // Show a notification
+          this.fire('iron-signal', {
+            name: 'notification',
+            data: {
+              title: this.user.firstName + ' your details were updated!'
+            }
+          });
         }
       });
     })();
