--- a/app/elements/key-add-element.html
+++ b/app/elements/key-add-element.html
@@ -29,7 +29,6 @@
       paper-dialog {
         width: 100%;
         max-width: 800px;
-        position: relative;
       }
 
       paper-dialog paper-icon-button {
@@ -63,20 +62,18 @@
       <h2>Add Key</h2>
       <paper-icon-button icon="clear" on-tap="_closeAddKeyModal"></paper-icon-button>
       <paper-dialog-scrollable>
-        <form is="iron-form" id="form" method="post" action="/login">
-          <paper-input label="Name" required error-message="Please enter key's name" value="{{key.name}}"></paper-input>
+        <paper-input id="name" label="Name" required error-message="Please enter key's name" value="{{key.name}}"></paper-input>
 
-          <paper-textarea label="Private Key" rows="5" required error-message="Please enter private key" value="{{key.privateKey}}" max-rows="5"></paper-textarea>
+        <paper-textarea id="privateKey" label="Private Key" rows="5" required error-message="Please enter private key" value="{{key.privateKey}}" max-rows="5"></paper-textarea>
 
-          <paper-textarea hidden$="[[!showPublicKey]]" label="Public Key" rows="5" value="{{key.publicKey}}" max-rows="5"></paper-textarea>
+        <paper-textarea id="publicKey" hidden$="[[!showPublicKey]]" label="Public Key" rows="5" value="{{key.publicKey}}" max-rows="5"></paper-textarea>
 
-          <div class="clearfix btn-group">
-            <paper-button raised on-tap="_generateKey">Generate</paper-button>
-            <paper-button raised on-tap="_uploadKey">Upload</paper-button>
-          </div>
+        <div class="clearfix btn-group">
+          <paper-button raised on-tap="_generateKey">Generate</paper-button>
+          <paper-button raised on-tap="_uploadKey">Upload</paper-button>
+        </div>
 
-          <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
-        </form>
+        <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
       </paper-dialog-scrollable>
     </paper-dialog>
 
@@ -95,9 +92,9 @@
             type: Object,
             value: function() {
               return {
-                name: null,
-                publicKey: null,
-                privateKey: null
+                name: '',
+                publicKey: '',
+                privateKey: ''
               }
             },
             notify: true
@@ -147,13 +144,11 @@
           this._formReset();
         },
         _formReset: function() {
-          this.set('key.name', null);
-          this.set('key.publicKey', null);
-          this.set('key.privateKey', null);
+          this.set('key.name', '');
+          this.set('key.publicKey', '');
+          this.set('key.privateKey', '');
           this.set('showPublicKey', false);
         },
-
-        // Generate Key Request
         _generateKey: function(e) {
           //   this.$.generateKeyAjax.generateRequest();
         },
@@ -162,7 +157,7 @@
         },
         _generateKeyAjaxResponse: function(e) {
           var response = e.detail;
-          this.set('key.publicKey', response.public.trim());
+          this.set('key.publicKey', response.public);
           this.set('key.privateKey', response.priv);
           this.set('sendingData', false);
           this.set('showPublicKey', true);
