add styling quests tracking

--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -13,7 +13,7 @@
       }
     </style>
 
-    <paper-card heading="Notes">
+    <paper-card heading="Elements Notes">
       <div class="card-content">
         <marked-element>
           <div class="markdown-html markdown-body"></div>
