--- a/app/index.html
+++ b/app/index.html
@@ -254,7 +254,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <a data-route="notes" href="/notes">
             <iron-icon icon="content-paste"></iron-icon>
-            <span>My Notes</span>
+            <span>Elements Notes</span>
+          </a>
+
+          <a data-route="styling-quests" href="/styling-quests">
+            <iron-icon icon="content-paste"></iron-icon>
+            <span>Styling Quests</span>
           </a>
 
           <a data-route="add-cloud" href="/add-cloud">
@@ -414,6 +419,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </section>
 
             <notes-page-element data-route="notes"></notes-page-element>
+
+            <styling-quests-page-element data-route="styling-quests"></styling-quests-page-element>
 
             <cloud-add-element data-route="add-cloud"></cloud-add-element>
 
