--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -62,6 +62,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'notes';
     });
 
+    page('/styling-quests', function() {
+      app.route = 'styling-quests';
+    });
+
     page('/add-cloud', function() {
       app.route = 'add-cloud';
     });
