--- a/app/index.html
+++ b/app/index.html
@@ -258,7 +258,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </a>
 
           <a data-route="styling-quests" href="/styling-quests">
-            <iron-icon icon="content-paste"></iron-icon>
+            <iron-icon icon="code"></iron-icon>
             <span>Styling Quests</span>
           </a>
 
