add notes / explain some more styling quests

--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -13,45 +13,38 @@
       }
     </style>
 
-    <paper-card heading="Elements Notes">
+    <paper-card>
       <div class="card-content">
         <marked-element>
           <div class="markdown-html markdown-body"></div>
           <script type="text/markdown">
-            ### Avatar
-            - Add dropdown menu
-
-            ### Add Cloud
+            #### Add Cloud
             - Place the real Object
             - Create dynamic dropdowns
             - Add validation
 
-            ### Keys List
-            - Put dummy keys
+            #### Keys List
             - Bind add key fab
             - Produce an event to child to show modal
             - Add checkboxes
-            - Sort by is default
+            - Sort by `isDefault`
             - Provide sort by name option
             - Bind to single key page (test animations here)
 
-            ### Add Key
+            #### Add Key
             - Set up upload key file
             - Set up iron-ajax request for save
             - Send the new key to keys list
 
-            ### Plans
+            #### Plans
             - Change the layout
             - Apply a different if...else logic in the template
             - Remove jQuery logic in the forms handlers
 
-            ### Sessions
+            #### Sessions
             - Use all functionality from tokens
 
-            ### Tokens
-            - Use results of search
-
-            ### Add Token
+            #### Add Token
             - Finish all forms handling
             - Send the new token to the parent element with an event
           </script>
