--- a/app/elements/token-item-element.html
+++ b/app/elements/token-item-element.html
@@ -38,7 +38,7 @@
       }
     </style>
 
-    <paper-item on-tap="_expandToken" class$="info-item flex-horizontal-with-ratios token-item [[indexClass]]">
+    <paper-item on-tap="_expandToken" class$="info-item flex-horizontal-with-ratios [[indexClass]]">
       <div class="flexchild">
         <paper-checkbox checked="{{selected}}" on-tap="_selectToken">[[token.name]]</paper-checkbox>
       </div>
