--- a/app/index.html
+++ b/app/index.html
@@ -220,6 +220,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       "user_agent": "python-requests/2.7.0 CPython/2.7.10 Darwin/14.5.0"
     }];
   </script>
+
+  <script src="scripts/api.js"></script>
 </head>
 
 <body unresolved>
