apply all funcs on key list / key isDefault update dynamically / add single key page / add edit key button

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -12,6 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/device-icons.html">
+<link rel="import" href="../bower_components/iron-icons/image-icons.html">
 <link rel="import" href="../bower_components/iron-icons/communication-icons.html">
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
@@ -78,6 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="cloud-add-element.html">
 <link rel="import" href="keys-list-element.html">
 <link rel="import" href="key-item-element.html">
+<link rel="import" href="key-page-element.html">
 <link rel="import" href="key-add-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
