--- a/app/elements/styling-quests-page-element.html
+++ b/app/elements/styling-quests-page-element.html
@@ -57,6 +57,9 @@
             </paper-dropdown-menu>
             ```
             I found [this](https://customelements.io/wuxiaoying/paper-dropdown-menu-ex/) which is for polymer 0.5 and [this](https://customelements.io/cheonhyangzhang/paper-typeahead-input/) which adds a typehead feature but it didn't work as wanted when tested. Maybe we could make a pull request on those or make our own version if we don't find a nice working option.
+
+            #### Tables styling
+            We need zebra styling for tables and border bottom except for the last one with css and not by using js and arrays indexes to find odd and even rows.
           </script>
         </marked-element>
       </div>
