--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Keys List</span>
           </a>
 
+          <a data-route="key" href="/keys/1">
+            <iron-icon icon="communication:vpn-key"></iron-icon>
+            <span>Single Key</span>
+          </a>
+
           <a data-route="add-key" href="/add-key">
             <iron-icon icon="communication:vpn-key"></iron-icon>
             <span>Add Key</span>
@@ -427,6 +432,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <keys-list-element data-route="keys"></keys-list-element>
 
             <key-add-element data-route="add-key"></key-add-element>
+
+            <key-page-element data-route="key"></key-page-element>
 
             <login-element data-route="login"></login-element>
 
